// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hidden Pure component match expected snapshot 1`] = `
<span
  className=" "
>
  <div>
    hidden content
  </div>
</span>
`;

exports[`Hidden Pure component with xs="down" md="exact" xl="up" match expected snapshot 1`] = `
<span
  className=" default-Hidden-hidden-down-xs default-Hidden-hidden-exact-md default-Hidden-hidden-up-xl "
>
  <div>
    hidden content
  </div>
</span>
`;
